--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -6,10 +6,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    // border: 1px solid black;
     margin: 0 7.5px 15px;
-    background-position: center;
-    background-size: cover;
+    overflow: hidden;
+    
+    &:hover {
+      cursor:  pointer;
+
+      & .image-background{
+        transform: scale(1.1);
+        transition: transform 3s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      }
+
+      & .content{
+        opacity: 0.9;
+      }
+    }
+    
 
     &.large {
       height: 380px;
@@ -23,6 +36,12 @@
       margin-left: 7.5px;
     }
   
+    .image-background{
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;
+    }
     .content {
       height: 90px;
       padding: 0 25px;
@@ -30,7 +49,10 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      border: 1px solid black;
+      // border: 1px solid black;
+      opacity: 0.7;
+      background-color: white;
+      position: absolute;
   
       .title {
         font-weight: bold;
